src/compilador/CMaisMenos.java
/* CMaisMenos.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. CMaisMenos.java */
package compilador;
import recovery.*;

public class CMaisMenos/*@bgen(jjtree)*/implements CMaisMenosTreeConstants, CMaisMenosConstants {/*@bgen(jjtree)*/
  protected static JJTCMaisMenosState jjtree = new JJTCMaisMenosState();public static void main(String args []) throws ParseException
  {
    CMaisMenos parser = new CMaisMenos(System.in);
    while (true)
    {
      System.out.println("Escreve alguma coisa ai");
      System.out.print("Escreve tipo: nascoxas algo tipoassim maisoumenos isso euacho");
      System.out.println(" ");

          SimpleNode node = CMaisMenos.main();
      System.out.println("A arvore do programa ficou assim:");
      node.dump(" -> ");
      try
      {
          System.out.println(" ");
          System.out.println("Pode ser.");
        /*switch (CMaisMenos.main())
        {
          case 0 : 
          break;
          case 1 : 
          System.out.println("Vai pela sombra.");
          break;
          default : 
          break;
        }*/
      }
      catch (Exception e)
      {
        System.out.println(" ");
        System.out.println("Acho que n\u00e3o.");
        System.out.println(e.getMessage());
        CMaisMenos.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("PUTZ.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

        static public String im(int x)
  {
    int k;
        String s;
    s = tokenImage[x];
    k = s.lastIndexOf("\"");
    try {
      s = s.substring(1,k);
    }
   catch (StringIndexOutOfBoundsException e)
           {}
   return s;
  }

  static public  Token lastError = null;
  static public  Token firstErrorToken = null;
  static public boolean eof ;    // variável que indica se EOF foi alcançado

  // o método abaixo consome tokens até alcançar um que pertença ao conjunto
  // de sincronização
  static void consumeUntil(RecoverySet g,
                         ParseException e,
                         String met) throws ParseEOFException,
                                            ParseException
  {
        Token tok;
        System.out.println();
        System.out.println("*** " + met + " ***");
        System.out.println("     Conjunto de sincroniza\u00e7\u00e3o: " + g);

        if (g == null) throw e; // se o conjunto é null, propaga a exceção

        tok = getToken(1); // pega token corrente
        if (firstErrorToken == null) {
        firstErrorToken = tok; // armazena o primeiro token do erro
    }
        while ( ! eof ) { // se não chegou ao fim do arquivo
          if ( g.contains(tok.kind)) {//achou um token no conjunto
            System.out.println("     Encontrado token de sincroniza\u00e7\u00e3o: " +
                               im(tok.kind));
            break;
          }
          System.out.println("     Ignorando o token: " + im(tok.kind));
          getNextToken();     // pega próximo token       
      tok = getToken(1);
          if (tok.kind == EOF && ! g.contains(EOF) ) // fim da entrada?   
              eof = true;
        }
    if ( tok != lastError)  {
          System.out.println(e.getMessage());
          lastError = tok;

        }
        if ( eof )
          throw new ParseEOFException("Encontrei EOF onde n\u00e3o deveria.");
  }

  static final public SimpleNode main() throws ParseException {/*@bgen(jjtree) main */
 SimpleNode jjtn000 = new SimpleNode(JJTMAIN);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.main;
    try {
      try {
        NasCoxas();
        Id();
        TipoIsso();
        Comandos();
        EuAcho();
{if ("" != null) return jjtn000;}
      } catch (ParseException e) {
consumeUntil(sinc, e, "Main");
    {if ("" != null) return null;}
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  static final public void Comandos() throws ParseException {/*@bgen(jjtree) Comandos */
 SimpleNode jjtn000 = new SimpleNode(JJTCOMANDOS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.comandos;
    try {
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case TIPOINTEIRO:
          case TIPOFLOAT:
          case TIPOBOOL:
          case SEPA:
          case ACONTECE:
          case VAINAFE:
          case ID:{
            ;
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case TIPOINTEIRO:
          case TIPOFLOAT:
          case TIPOBOOL:{
            DeclaraVariavel();
            break;
            }
          case ID:{
            AtribuiValor();
            break;
            }
          case SEPA:{
            If();
            break;
            }
          case ACONTECE:{
            While();
            break;
            }
          case VAINAFE:{
            For();
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (ParseException e) {
consumeUntil(sinc, e, "Comandos");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void DeclaraVariavel() throws ParseException {/*@bgen(jjtree) DeclaraVariavel */
 SimpleNode jjtn000 = new SimpleNode(JJTDECLARAVARIAVEL);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.declaraVariavel;
    try {
      try {
        TipoVariavel();
        Id();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IGUAL:{
          Igual();
          Expressao();
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VIRGULA:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          Virgula();
          Id();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IGUAL:{
            Igual();
            Expressao();
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            ;
          }
        }
        PontoVirgula();
      } catch (ParseException e) {
consumeUntil(sinc, e, "Declara\u00e7\u00e3o de vari\u00e1vel");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void DeclaraVariavelFor() throws ParseException {/*@bgen(jjtree) DeclaraVariavelFor */
 SimpleNode jjtn000 = new SimpleNode(JJTDECLARAVARIAVELFOR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.declaraVariavelFor;
    try {
      try {
        TipoVariavel();
        Id();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IGUAL:{
          Igual();
          Expressao();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
      } catch (ParseException e) {
consumeUntil(sinc, e, "Declara\u00e7\u00e3o de vari\u00e1vel para for");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void TipoVariavel() throws ParseException {/*@bgen(jjtree) TipoVariavel */
 SimpleNode jjtn000 = new SimpleNode(JJTTIPOVARIAVEL);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.tipoVariavel;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TIPOINTEIRO:{
          PoucaCoisa();
          break;
          }
        case TIPOFLOAT:{
          FaloueDisse();
          break;
          }
        case TIPOBOOL:{
          MaisOuMenos();
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
consumeUntil(sinc, e, "Tipo de vari\u00e1vel");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void OperadorMatematico() throws ParseException {/*@bgen(jjtree) OperadorMatematico */
 SimpleNode jjtn000 = new SimpleNode(JJTOPERADORMATEMATICO);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.operadorMatematico;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MAIS:{
          Mais();
          break;
          }
        case MENOS:{
          Menos();
          break;
          }
        case MULTI:{
          Multiplicado();
          break;
          }
        case DIVISAO:{
          Dividido();
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
consumeUntil(sinc, e, "Operador matem\u00e1tico");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void OperadorLogico() throws ParseException {/*@bgen(jjtree) OperadorLogico */
 SimpleNode jjtn000 = new SimpleNode(JJTOPERADORLOGICO);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.operadorLogico;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IGUAL_LOG:{
          IgualIgual();
          break;
          }
        case DIFERENTE:{
          Diferente();
          break;
          }
        case MENOR_IGUAL:{
          MenorIgual();
          break;
          }
        case MAIOR_IGUAL:{
          MaiorIgual();
          break;
          }
        case MENOR:{
          Menor();
          break;
          }
        case MAIOR:{
          Maior();
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
consumeUntil(sinc, e, "Operador l\u00f3gico");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Expressao() throws ParseException {/*@bgen(jjtree) Expressao */
 SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSAO);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.expressao;
    try {
      try {
        Termo();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case MAIS:
          case MENOS:
          case MULTI:
          case DIVISAO:{
            ;
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            break label_3;
          }
          OperadorMatematico();
          Termo();
        }
      } catch (ParseException e) {
consumeUntil(sinc, e, "Express\u00e3o matem\u00e1tica");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void ExpressaoLogica() throws ParseException {/*@bgen(jjtree) ExpressaoLogica */
 SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSAOLOGICA);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.expressaoLogica;
    try {
      try {
        Expressao();
        OperadorLogico();
        Expressao();
      } catch (ParseException e) {
consumeUntil(sinc, e, "Express\u00e3o l\u00f3gica");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void Termo() throws ParseException {/*@bgen(jjtree) Termo */
 SimpleNode jjtn000 = new SimpleNode(JJTTERMO);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.termo;
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ABREPAR:{
          AbrePar();
          Expressao();
          FechaPar();
          break;
          }
        case MENOS:{
          Menos();
          Termo();
          break;
          }
        case ID:{
          Id();
          break;
          }
        case DECIMAL:{
          Numero();
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
consumeUntil(sinc, e, "Termo");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void AtribuiValor() throws ParseException {/*@bgen(jjtree) AtribuiValor */
 SimpleNode jjtn000 = new SimpleNode(JJTATRIBUIVALOR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.atribuiValor;
    try {
      try {
        Id();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IGUAL:{
          Igual();
          break;
          }
        case MAIS_IGUAL:{
          MaisIgual();
          break;
          }
        case MENOS_IGUAL:{
          MenosIgual();
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        Expressao();
        PontoVirgula();
      } catch (ParseException e) {
consumeUntil(sinc, e, "Atribui\u00e7\u00e3o de valor");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void If() throws ParseException {/*@bgen(jjtree) If */
 SimpleNode jjtn000 = new SimpleNode(JJTIF);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.sepaIf;
    try {
      try {
        Sepa();
        AbrePar();
        ExpressaoLogica();
        FechaPar();
        TipoIsso();
        Comandos();
        EuAcho();
      } catch (ParseException e) {
consumeUntil(sinc, e, "Sepa");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  static final public void While() throws ParseException {/*@bgen(jjtree) While */
 SimpleNode jjtn000 = new SimpleNode(JJTWHILE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sinc = Follow.aconteceWhile;
    try {
      try {
        Acontece();
        AbrePar();
        ExpressaoLogica();
        FechaPar();
        TipoIsso();
        Comandos();
        EuAcho();
      } catch (ParseException e) {
consumeUntil(sinc, e, "Acontece");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}
